--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,12 @@ exclude = [".cargo", "memory.x"]
 [dependencies]
 embedded-hal = "0.2"
 
+[dev-dependencies]
+cortex-m = "0.7"
+cortex-m-rt = "0.7"
+rtt-target = { version = "0.3", features = ["cortex-m"] }
+stm32f4xx-hal = { features = ["rt", "stm32f405", "sdio"], version = "0.13" }
+
 [profile.release]
 codegen-units = 1   # better optimizations
 debug = true        # symbols are nice and they don't increase the size on Flash
