--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ exclude = [".cargo", "memory.x"]
 
 [dependencies]
 embedded-hal = "0.2"
+num_enum = { version = "0.5", default-features = false }
 
 [dev-dependencies]
 cortex-m = "0.7"
