--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 license = "MIT/Apache-2.0"
 name = "adafruit-seesaw"
 readme = "README.md"
+repository = "https://github.com/alexeden/adafruit-seesaw"
 version = "0.0.4"
 exclude = [".cargo", "memory.x"]
 
