--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ num_enum = { version = "0.5", default-features = false }
 cortex-m = "0.7"
 cortex-m-rt = "0.7"
 rtt-target = { version = "0.3", features = ["cortex-m"] }
+shared-bus = "0.2"
 stm32f4xx-hal = { features = ["rt", "stm32f405", "sdio"], version = "0.13" }
 
 [profile.release]
