--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,8 +1,8 @@
 edition = "2021"
 format_code_in_doc_comments = true
 format_strings = true
+imports_granularity="Crate"
 max_width = 100
-merge_imports = true
 reorder_impl_items = true
 reorder_imports = true
 tab_spaces = 4
