--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,17 @@
 [package]
+name = "adafruit-seesaw"
+version = "0.1.1"
 authors = ["Alex Eden <alexandereden91@gmail.com>"]
 description = "[WIP] Embedded rust implementation of the Adafruit Seesaw library."
 edition = "2021"
 license = "MIT/Apache-2.0"
-name = "adafruit-seesaw"
 readme = "README.md"
 repository = "https://github.com/alexeden/adafruit-seesaw"
-version = "0.1.1"
 exclude = [".cargo", "memory.x"]
+
+[lib]
+bench = false
+test = false
 
 [dependencies]
 embedded-hal = "0.2"
