--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,16 +2,25 @@
 name = "adafruit-seesaw"
 version = "0.1.1"
 authors = ["Alex Eden <alexandereden91@gmail.com>"]
-description = "[WIP] Embedded rust implementation of the Adafruit Seesaw library."
 edition = "2021"
+
+description = "Platform-agnostic implementation of the Adafruit Seesaw library."
+documentation = "https://docs.rs/adafruit-seesaw"
+categories = ["embedded", "no-std"]
+keywords = ["embedded", "shared-bus", "seesaw", "adafruit", "i2c", "bus"]
+exclude = [".cargo", "memory.x"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/alexeden/adafruit-seesaw"
-exclude = [".cargo", "memory.x"]
+
+[package.metadata.docs.rs]
+all-features = true
 
 [lib]
 bench = false
 test = false
+
+
 
 [dependencies]
 embedded-hal = "0.2"
