Oops too many keywords

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 description = "Platform-agnostic implementation of the Adafruit Seesaw library."
 documentation = "https://docs.rs/adafruit-seesaw"
 categories = ["embedded", "no-std"]
-keywords = ["embedded", "shared-bus", "seesaw", "adafruit", "i2c", "bus"]
+keywords = ["shared-bus", "seesaw", "adafruit", "i2c", "bus"]
 exclude = [".cargo", "memory.x"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
