--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,10 +2,9 @@
 target = "thumbv7em-none-eabihf"
 
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-runner = "probe-run --chip STM32F405rgt"
-
-[target.thumbv7em-none-eabihf]
 rustflags = ["-C", "link-arg=-Tlink.x", "-C", "link-arg=--nmagic"]
+runner = "probe-run --connect-under-reset --chip nRF52840_xxAA" # Use this for nordic
+# runner = "probe-run --chip STM32F405rgt" # Use this for STM32F4
 
 [unstable]
 build-std = ["core"]
