Update to embedded-hal 1.0.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,14 +20,14 @@ bench = false
 test = false
 
 [dependencies]
-embedded-hal = "0.2"
-shared-bus = "0.2"
+embedded-hal = "1.0.0"
+shared-bus = "0.3.1"
 
 [dev-dependencies]
 cortex-m = "0.7"
 cortex-m-rt = "0.7"
-rtt-target = { version = "0.3", features = ["cortex-m"] }
-stm32f4xx-hal = { features = ["rt", "stm32f405", "sdio"], version = "0.13" }
+rtt-target = { version = "0.5.0" }
+stm32f4xx-hal = { features = [ "stm32f405", "sdio"], version = "0.20.0" }
 
 [profile.release]
 codegen-units = 1
