--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Platform-agnostic implementation for communicating with devices t
 documentation = "https://docs.rs/adafruit-seesaw"
 categories = ["embedded", "no-std"]
 keywords = ["shared-bus", "seesaw", "adafruit", "i2c", "embedded"]
-exclude = [".cargo", "memory.x"]
+exclude = ["/.cargo", "memory.x"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/alexeden/adafruit-seesaw"
