--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "adafruit-seesaw"
-version = "0.5.3"
+version = "0.6.0"
 authors = ["Alex Eden <alexandereden91@gmail.com>"]
 edition = "2021"
 description = "Platform-agnostic implementation for communicating with devices that run the Seesaw firmware."
 documentation = "https://docs.rs/adafruit-seesaw"
 categories = ["embedded", "no-std"]
 keywords = ["shared-bus", "seesaw", "adafruit", "i2c", "embedded"]
-exclude = ["/.cargo", "memory.x"]
+exclude = ["/.cargo", "/.rustfmt.toml"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/alexeden/adafruit-seesaw"
