CI: set to nightly toolchain

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: rustup toolchain install nightly --profile minimal
+      - run: rustup default nightly
       - run: cargo clippy --all-targets --all-features
