--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,10 +1,18 @@
-# [build]
-# target = "thumbv7em-none-eabihf"
+[build]
+target = "thumbv7em-none-eabihf"
 
 # [target.'cfg(all(target_arch = "arm", target_os = "none"))']
 # # rustflags = ["-C", "link-arg=-Tlink.x", "-C", "link-arg=--nmagic"]
 # # runner = "probe-run --connect-under-reset --chip nRF52840_xxAA" # Use this for nordic
 # runner = "probe-run --chip STM32F405rgt" # Use this for STM32F4
+
+# [target.thumbv7em-none-eabihf]
+# rustflags = [
+#     "-C",
+#     "link-arg=-Tlink.x", # Link
+#     "-C",
+#     "link-arg=--nmagic", # Magic
+# ]
 
 # [unstable]
 # build-std = ["core"]
