--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,5 @@ jobs:
       - uses: actions/checkout@v4
       - run: rustup toolchain install nightly --profile minimal --component clippy
       - run: rustup default nightly
+      - run: rustup target add thumbv7em-none-eabihf
       - run: cargo clippy --all-targets --all-features
