--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
-[build]
-target = "thumbv7em-none-eabihf"
+# [build]
+# target = "thumbv7em-none-eabihf"
 
 # [target.'cfg(all(target_arch = "arm", target_os = "none"))']
 # # rustflags = ["-C", "link-arg=-Tlink.x", "-C", "link-arg=--nmagic"]
