add possibility to use `embedded-hal-bus`
this isn't particularly nice, but it avoids re-writing the complete
library to kick out `Driver: I2c + DelayNs` which permeates all of the
code.

a better name might be required for this!

note that depending on the HAL you might have the possibility to clone
the delay or instantiate a generic new one every time (e.g. using
`embassy_time::Delay`).

resolves #16

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ cortex-m-rt = "0.7"
 heapless = "0.8"
 rtt-target = { version = "0.6" }
 stm32f4xx-hal = { features = ["stm32f405", "sdio"], version = "0.20" }
+embedded-hal-bus = "0.3"
 
 [profile.release]
 codegen-units = 1
