--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,17 +17,7 @@ all-features = true
 rustdoc-args = ["--generate-link-to-definition"]
 
 [features]
-default = [
-    "device_arcade_button_1x4",
-    "device_neokey_1x4",
-    "device_neorotary4",
-    "device_neoslider",
-    "device_neotrellis",
-    "device_rotary_encoder",
-
-    "module_keypad",
-    "module_neopixel",
-]
+default = []
 
 nightly = [
     "device_arcade_button_1x4",
@@ -40,8 +30,6 @@ nightly = [
     "module_keypad",
     "module_neopixel",
 ]
-
-std = [] # to be deprecated
 
 # devices only depend on the modules which they absolutely need for the basics to work
 device_arcade_button_1x4 = ["module_gpio", "module_timer"]
