--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,8 @@ module_keypad = []
 module_neopixel = []
 module_timer = []
 
+defmt = ["dep:defmt"]
+
 [lib]
 bench = false
 test = false
@@ -65,6 +67,7 @@ test = false
 [dependencies]
 embedded-hal = "1.0.0"
 rgb = "0.8.50"
+defmt = { version = "1", optional = true }
 
 [dev-dependencies]
 cortex-m = "0.7"
