add formatting check to CI
there's no need to run this per feature => this isn't part of the build
matrix of the existing linting job.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,3 +58,11 @@ jobs:
       - run: rustup default nightly
       - run: cargo build --no-default-features ${features}
       - run: cargo clippy --no-default-features ${features}
+
+  formatting:
+    name: Formatting
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: rustup toolchain install nightly --component rustfmt
+      - run: cargo +nightly fmt --all -- --check
